--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,10 +37,32 @@ jobs:
     - name: Test with unittest
       run: |
         python -m unittest discover
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
+#     - name: Build and Push Docker Image
+#       uses: mr-smithers-excellent/docker-build-push@v4
+#       with:
+#         image: pejmans21/demo-app
+#         registry: docker.io
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    -
+      name: Checkout 
+      uses: actions/checkout@v2
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v1
       with:
-        image: pejmans21/demo-app
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+
