--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,25 +44,23 @@ jobs:
 #         registry: docker.io
 #         username: ${{ secrets.DOCKER_USERNAME }}
 #         password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    -
-      name: Checkout 
+
+    - name: Checkout
       uses: actions/checkout@v2
-    -
-      name: Login to Docker Hub
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Set up Docker Buildx
+
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    -
-      name: Build and push
+
+    - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/demo-app:latest
-
+        tags: ${{ secrets.DOCKER_USERNAME }}/demo-app:gitpod
