--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.2.0
@@ -8,8 +10,7 @@ repos:
       - id: check-added-large-files
       - id: check-toml
       - id: pretty-format-json
-      - id: name-tests-test
-        exclude: "(^.vscode/|dicom_converter/_version.py)"
+        exclude: "^.vscode/"
 
   - repo: https://github.com/asottile/seed-isort-config
     rev: v2.2.0
@@ -23,7 +24,33 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.6.0  # Use the sha / tag you want to point at
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
     hooks:
-      - id: autopep8
+      - id: flake8
+        additional_dependencies:
+          - flake8-docstrings
+        files: "^comic_cover_generator/"
+  - repo: https://github.com/myint/docformatter
+    rev: v1.4
+    hooks:
+      - id: docformatter
+        args: [--in-place, --wrap-summaries, "88", --wrap-descriptions, "88"]
+  - repo: https://github.com/iterative/dvc
+    rev: 2.10.1
+    hooks:
+      - id: dvc-pre-commit
+        language_version: python3
+        stages:
+          - commit
+      - id: dvc-pre-push
+        # use s3/gs/etc instead of all to only install specific cloud support
+        additional_dependencies: [".[all]"]
+        language_version: python3
+        stages:
+          - push
+      - always_run: true
+        id: dvc-post-checkout
+        language_version: python3
+        stages:
+          - post-checkout
